top nav only has an issue with h1 as it wont center align right Dont got time for things that should be working when they dont now onto the two sections with row

--- a/css/index.css
+++ b/css/index.css
@@ -78,12 +78,22 @@ time,
 mark,
 audio,
 video {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+body hr {
+  margin-top: 4vh;
+  margin-bottom: 4vh;
 }
 body header nav {
   display: flex;
@@ -126,41 +136,66 @@ body header nav a:nth-last-child(1) {
   height: 2rem;
 }
 body section,
-body .title-container {
+header section,
+body .title-container,
+header .title-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%;
 }
 body section #bgimg,
-body .title-container #bgimg {
+header section #bgimg,
+body .title-container #bgimg,
+header .title-container #bgimg {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70rem;
-  height: 50rem;
+  width: 70vw;
+  height: 90vh;
   background-image: url("/assets/Alfred-Sisley.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
-body section #bgimg h1,
-body .title-container #bgimg h1 {
+body section #bgimg #h1conid,
+header section #bgimg #h1conid,
+body .title-container #bgimg #h1conid,
+header .title-container #bgimg #h1conid {
   display: flex;
-  flex-direction: space-between;
-  color: white;
+  flex-direction: space-evenly;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  /* Cant get the h1 information to center align 
+                just like how the button is doing with its text h1 wont do it too*/
+}
+body section #bgimg #h1conid .h1con,
+header section #bgimg #h1conid .h1con,
+body .title-container #bgimg #h1conid .h1con,
+header .title-container #bgimg #h1conid .h1con {
+  width: 40vw;
+  height: 30vh;
+}
+body section #bgimg #h1conid h1,
+header section #bgimg #h1conid h1,
+body .title-container #bgimg #h1conid h1,
+header .title-container #bgimg #h1conid h1 {
+  display: flex;
+  flex-direction: space-evenly;
+  justify-content: center;
+  flex-wrap: wrap;
   align-content: center;
-  margin-top: 11rem;
-  width: 100%;
-  height: 100%;
+  color: white;
   font-size: 6rem;
 }
 body section #bgimg button,
-body .title-container #bgimg button {
+header section #bgimg button,
+body .title-container #bgimg button,
+header .title-container #bgimg button {
   display: flex;
   flex-direction: space-between;
+  width: 12vw;
+  height: 18vh;
+  font-size: 2.9rem;
   align-content: center;
-  width: 10%;
-  height: 10%;
-  margin-bottom: 19rem;
 }
