--- a/less/general.less
+++ b/less/general.less
@@ -1,64 +1,11 @@
 body{
-    header{
-        nav{
-            .nav-mixin();
-        } // end nav
+    
 
+   
 
-    } // end header
-
-
-    section, .title-container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        //width:100%;
-
-        height:100%;
-
-
-        #bgimg{
-            display:flex;
-            flex-direction: column;
-
-          //  border:4px solid green;
-          align-items: center;
-          
-            width:70rem;
-            height:50rem;
-                background-image: url("/assets/Alfred-Sisley.jpg") ;
-                background-repeat: no-repeat;
-                background-size:cover;
-            
-            h1{
-                display:flex;
-            flex-direction: space-between;
-                color:white;
-          //  border:4px solid green;
-          justify-content: center;
-          align-content: center;
-          margin-top:11rem;
-          width:100%;
-          height:100%;
-                font-size:6rem;
-            }
-            button{
-                display:flex;
-            flex-direction: space-between;
-
-          //  border:4px solid green;
-          align-content: center;
-          width:10%;
-          height:10%;
-          margin-bottom:19rem;
-            }
-        }//end bgimg
-        
-        
-    }//end section .title-container
-
-
-
+hr{
+    .hr();
+}
 
 
 }// end body 
