--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,3 +1,5 @@
+
+// The navigation at the top with the a links
 .nav-mixin(){
     .active{
         font-weight:bolder;
@@ -39,3 +41,78 @@
                 height:2rem;
             }
 }
+
+// The background img section with h1s and what not
+.bgimgcon(){
+    display: flex;
+        flex-direction: column;
+        align-items: center;
+        //width:100%;
+
+        height:100%;
+
+
+        #bgimg{
+            display:flex;
+            flex-direction: column;
+
+          //  border:4px solid green;
+          align-items: center;
+          
+            width:70vw;
+            height:90vh;
+                background-image: url("/assets/Alfred-Sisley.jpg") ;
+                background-repeat: no-repeat;
+                background-size:cover;
+                #h1conid{
+                    display:flex;
+                    flex-direction: space-evenly;
+                   justify-content: center;
+                   align-items: center;
+                   flex-wrap: wrap;
+                   //height:100%;
+                    .h1con{
+                  // border:3px solid black;
+                        width:40vw;
+                        height:30vh;
+                    }
+                /* Cant get the h1 information to center align 
+                just like how the button is doing with its text h1 wont do it too*/
+                        h1{
+                            
+                            display:flex;
+                        flex-direction: space-evenly;
+                        justify-content: center;
+                        flex-wrap: wrap;
+                        align-content: center;
+                            color:white;
+                    //  border:4px solid green;
+                    //justify-content: center;
+                   // align-content: center;
+                    //margin-top:11rem;
+                   // width:100%;
+                    //height:100%;
+                            font-size:6rem;
+                        }
+                } // end h1conid
+                
+                    button{
+                        display:flex;
+                    flex-direction: space-between;
+                        width:12vw;
+                        height:18vh;
+                        font-size:2.9rem;
+                //  border:4px solid green;
+                align-content: center;
+            
+                //margin-bottom:19rem;
+                    }
+        }//end bgimg
+}
+// The hr line after first section with background img
+.hr(){
+    margin-top:4vh;
+    margin-bottom:4vh;
+}
+
+
