--- a/less/reset.less
+++ b/less/reset.less
@@ -11,6 +11,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -18,3 +19,10 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+  
+  *,
+  *:before,
+  *:after {
+	box-sizing: inherit;
+  }
